fix text color contrast with background color

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,7 +11,7 @@ html {
 
 @layer base {
   body {
-    @apply bg-[#A96D47] text-[#1f2937] tracking-wide dark:bg-gray-900 dark:text-slate-300;
+    @apply bg-[#A96D47] text-[#070400] tracking-wide dark:bg-gray-900 dark:text-slate-300;
   }
 
   h1,
